all but footer correctly aligned

--- a/css/layout.css
+++ b/css/layout.css
@@ -2,11 +2,28 @@
 header {
   width: 100%;
   line-height: 75px;
-  margin: auto;
 }
 
 footer {
+  width: 100%;
   line-height: 80px;
   clear: both;
 }
 
+@media (min-width: 768px) {
+  header {
+    line-height: 100px;
+  }
+  
+  main {
+    width: 79.17%;
+    float: right;
+  }  
+
+  footer {
+    width: 79.17%;
+    line-height: 150px;
+    float: right;
+  }
+  
+}
